objects/APXTConga4__Conga_Solution_Report__c.object
<CustomObject>
    <fields>
        <fullName>APXTConga4__Alias__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alias</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Conga_Solution__c</fullName>
        <label>Conga Solution</label>
        <referenceTo>APXTConga4__Conga_Solution__c</referenceTo>
        <relationshipLabel>Conga Solution Reports</relationshipLabel>
        <relationshipName>Conga_Solution_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Report_Id_Link__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; &amp; APXTConga4__Report_Id__c, APXTConga4__Report_Id__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Report_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Report_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__pv0__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Automatically populated according to the field selected. This value will be dynamically passed to the first filter of the report. Using a plus sign (+) specifies that a blank value should be used.</inlineHelpText>
        <label>pv0</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__pv1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Automatically populated according to the field selected. This value will be dynamically passed to the second filter of the report. Using a plus sign (+) specifies that a blank value should be used.</inlineHelpText>
        <label>pv1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__pv2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Automatically populated according to the field selected. This value will be dynamically passed to the third filter of the report. Using a plus sign (+) specifies that a blank value should be used.</inlineHelpText>
        <label>pv2</label>
        <type>TextArea</type>
    </fields>
    <label>Conga Solution Report</label>
    <nameField>
        <displayFormat>CSR-{00000}</displayFormat>
        <label>Conga Solution Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Solution Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>